--- a/JS-hw7/02-lightbox.html
+++ b/JS-hw7/02-lightbox.html
@@ -18,7 +18,7 @@ https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.12.1/simple-lightbox.min
     <p><a href="index.html">Go back</a></p>
 
     <!-- Add gallery items to this list -->
-    <div class="gallery"></div>
+    <ul class="gallery"></ul>
 
     <script src="
 https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.12.1/simple-lightbox.min.js
