--- a/JS-hw9/src/02-timer.html
+++ b/JS-hw9/src/02-timer.html
@@ -9,7 +9,7 @@
   <body>
     <p><a href="index.html">Go back</a></p>
 
-    <input type="text" id="datetime-picker" />
+    <input type="text" id="datetime-picker" placeholder="Select Date..." />
     <button type="button" data-start>Start</button>
 
     <div class="timer">
@@ -31,6 +31,6 @@
       </div>
     </div>
 
-    <script src="js/02-timer.js" type="module"></script>
+    <script src="js/02-timers.js" type="module"></script>
   </body>
 </html>
